# succinct-summer-2.5

./: .env  .gitignore  Cargo.toml  README  README.md
primitives/: Cargo.toml
primitives/src/: data_structure.rs
prover/: Cargo.toml
prover/src/: client.rs  main.rs
verifier/: Cargo.toml
verifier/src/: execution.rs  main.rs  networking.rs
