[workspace]
members = [ "primitives","prover", "verifier"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
jsonrpsee                               = { version = "0.25.1", features = ["server", "client-core", "http-client", "ws-client", "macros"] }
redis                                   = { version = "0.32.0", features = ["tokio-comp"] }
tokio                                   = { version = "1.37.0",features = ["net"] }
anyhow                                  = { version = "1.0.98", features = ["std"] }
log                                     = { version = "0.4.21", default-features = false }
codec                                   = { version = "3.1.3",features = ["derive"], package = "parity-scale-codec", default-features = false }
alloy-primitives                        = { version = "1.2.0", features = ["k256"] }
serde                                   = { version = "1.0.204", features = ["alloc","derive"] }
serde_json                              = { version = "1.0.127", features = ["alloc","raw_value"]}
sp1-sdk                                 = { version = "5.0.5"}
alloy-signer                            = { version = "1.0.12" }
alloy-signer-local                      = { version = "1.0.12" }
dotenv                                  = { version = "0.15.0" }
rand                                    = { version = "0.8.5" }
clap                                    = { version = "4.5.28", features = ["derive"] }
simplelog                               = "^0.12.0"
