[package]
name = "primitives"
version.workspace = true
edition.workspace = true

[dependencies]
codec                                   = { workspace = true}
serde                                   = { workspace = true}
alloy-primitives                        = { workspace = true}
anyhow                                  = { workspace = true}
alloy-signer                            = { workspace = true}
alloy-signer-local                      = { workspace = true}
sp1-sdk                                 = { workspace = true}
serde_json                              = { workspace = true}