[package]
name = "prover"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio                                       = { workspace = true }
log                                         = { workspace = true }
anyhow                                      = { workspace = true }
dotenv                                      = { workspace = true }
redis                                       = { workspace = true }
serde                                       = { workspace = true }
serde_json                                  = { workspace = true }
clap                                        = { workspace = true }
simplelog                                   = { workspace = true }
sp1-sdk                                     = { workspace = true }
jsonrpsee                                   = { workspace = true, features = ["client-ws-transport-tls"] }
alloy-signer                                = { workspace = true }
alloy-signer-local                          = { workspace = true }
alloy-primitives                            = { workspace = true }

# Local dependencies
primitives                                  = { workspace = true }